--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
 :root {
   --main-color: #338d41;
   --transparent-color: #338d4183;
-  --section-padding: 100px;
+  --section-padding: 40px;
 }
 /* End Variables */
 /* Start Global Rules */
@@ -47,7 +47,64 @@ ul {
   }
 }
 /* End Global Rules */
+/* Start Component */
+.main-heading {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: 10px;
+  align-items: center;
+  text-align: center;
+  margin-bottom: 40px;
+}
+.main-heading h2 {
+  position: relative;
+  margin-bottom: 40px;
+  width: fit-content;
+  font-weight: 800;
+}
+.main-heading h2::after {
+  content: "";
+  width: 10px;
+  height: 10px;
+  border: 1px solid black;
+  border-radius: 50%;
+  background-color: white;
+  position: absolute;
+  top: calc(100% + 10px);
+  left: 50%;
+  z-index: 3;
+  transform: translateX(-50%);
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  -ms-border-radius: 50%;
+  -o-border-radius: 50%;
+  -webkit-transform: translateX(-50%);
+  -moz-transform: translateX(-50%);
+  -ms-transform: translateX(-50%);
+  -o-transform: translateX(-50%);
+}
+.main-heading h2::before {
+  content: "";
+  height: 1px;
+  width: 100%;
+  background-color: black;
+  position: absolute;
+  top: calc(100% + 15px);
+  left: 50%;
+  transform: translateX(-50%);
+  -webkit-transform: translateX(-50%);
+  -moz-transform: translateX(-50%);
+  -ms-transform: translateX(-50%);
+  -o-transform: translateX(-50%);
+}
+.main-heading p {
+  font-size: 17px;
+  line-height: 1.8;
+  color: #777;
+}
 
+/* End Component */
 /* Header */
 header {
   position: absolute;
@@ -246,3 +303,54 @@ header nav ul .active, header nav ul a:hover {
   background-color: var(--main-color);
 }
 /* /Landing */
+
+/* Services */
+.services {
+  padding-top: var(--section-padding);
+  padding-bottom: var(--section-padding);
+}
+
+@media (min-width:768px) {
+  .services .serv-container {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(450px, 1fr));
+  }
+
+  .services .serv-container .text .serv {
+    margin: 0;
+  }
+}
+
+.services .serv {
+  display: flex;
+  margin-bottom: 40px;
+}
+
+.services .serv i{
+  margin-right: 35px;
+  color: var(--main-color);
+}
+
+.serv .text h3 {
+  margin-bottom: 25px;
+  color: var(--main-color);
+}
+
+.serv .text p {
+  color: #777;
+  line-height: 1.8;
+}
+@media (min-width:768px) {
+  .services .serv-container {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(450px, 1fr));
+    grid-column-gap: 40px;
+    grid-row-gap: 30px;
+
+  }
+
+  .services .serv {
+    margin-bottom: 0;
+  }
+}
+/* /Services */
