--- a/css/style.css
+++ b/css/style.css
@@ -402,3 +402,109 @@ header nav ul .active, header nav ul a:hover {
 .design .content li {
   padding: 20px;
 }
+
+/* portfolio */
+.portfolio {
+  padding-top: var(--section-padding);
+  padding-bottom: var(--section-padding);
+}
+
+.portfolio .shuffle {
+  margin-top: 90px;
+  display: flex;
+  justify-content: center;
+  column-gap: 2px;
+}
+
+.portfolio .shuffle li a {
+  text-decoration: none;
+  padding: 5px 15px;
+  transition: .3s;
+  -webkit-transition: .3s;
+  -moz-transition: .3s;
+  -ms-transition: .3s;
+  -o-transition: .3s;
+}
+.portfolio .shuffle li a:hover {
+  background-color: var(--main-color);
+  color: white;
+}
+.portfolio .shuffle li .active {
+  color: white;
+  background-color: var(--main-color);
+}
+
+.portfolio .imgs {
+  display: flex;
+  flex-wrap: wrap;
+  margin-top: 60px;
+}
+
+.portfolio .imgs .box {
+  flex-basis: 100%;
+  position: relative;
+  overflow: hidden;
+}
+@media (min-width: 768px) {
+  .portfolio .imgs .box {
+    flex-basis: 50%;
+  }
+}
+@media (min-width: 1199px) {
+  .portfolio .imgs .box {
+    flex-basis: 25%;
+  }
+}
+.portfolio .imgs .box img{
+  width: 100%;
+  transition: .3s;
+  -webkit-transition: .3s;
+  -moz-transition: .3s;
+  -ms-transition: .3s;
+  -o-transition: .3s;
+}
+
+.portfolio .imgs .box:hover img {
+  transform: rotate(3deg) scale(1.1);
+  -webkit-transform: rotate(3deg) scale(1.1);
+  -moz-transform: rotate(3deg) scale(1.1);
+  -ms-transform: rotate(3deg) scale(1.1);
+  -o-transform: rotate(3deg) scale(1.1);
+}
+
+.portfolio .imgs .box img:hover + .caption {
+  bottom: 0;
+}
+.portfolio .imgs .box .caption {
+  position: absolute;
+  left: 0;
+  bottom: -100%;
+  padding: 25px;
+  width: 100%;
+  background-color: var(--transparent-color);
+  transition: .3s;
+  -webkit-transition: .3s;
+  -moz-transition: .3s;
+  -ms-transition: .3s;
+  -o-transition: .3s;
+}
+.portfolio .imgs .box .caption h4{
+  font-weight: 600;
+  margin-bottom: 20px;
+  color: white;
+}
+.portfolio .imgs .box .caption p {
+  color: white;
+}
+
+.portfolio .more {
+  margin: 50px auto 0;
+}
+.portfolio .more a {
+  background-color: var(--main-color);
+  text-decoration: none;
+  font-size: 20px;
+  color: white;
+  padding: 5px 15px;
+}
+/* /portfolio */
